--- a/inst/rstudio/templates/project/resources/03-chap3.Rmd
+++ b/inst/rstudio/templates/project/resources/03-chap3.Rmd
@@ -1,75 +1,3 @@
-```{r include_packages_2, include = FALSE}
-# This chunk ensures that the sussexthesis package is
-# installed and loaded. This sussexthesis package includes
-# the template files for the thesis and also two functions
-# used for labeling and referencing
-if (!require(remotes)) {
-  if (params$`Install needed packages for {sussexthesis}`) {
-    install.packages("remotes", repos = "https://cran.rstudio.com")
-  } else {
-    stop(
-      paste(
-        'You need to run install.packages("remotes")',
-        "first in the Console."
-      )
-    )
-  }
-}
-if (!require(dplyr)) {
-  if (params$`Install needed packages for {sussexthesis}`) {
-    install.packages("dplyr", repos = "https://cran.rstudio.com")
-  } else {
-    stop(
-      paste(
-        'You need to run install.packages("dplyr")',
-        "first in the Console."
-      )
-    )
-  }
-}
-if (!require(ggplot2)) {
-  if (params$`Install needed packages for {sussexthesis}`) {
-    install.packages("ggplot2", repos = "https://cran.rstudio.com")
-  } else {
-    stop(
-      paste(
-        'You need to run install.packages("ggplot2")',
-        "first in the Console."
-      )
-    )
-  }
-}
-if (!require(bookdown)) {
-  if (params$`Install needed packages for {sussexthesis}`) {
-    install.packages("bookdown", repos = "https://cran.rstudio.com")
-  } else {
-    stop(
-      paste(
-        'You need to run install.packages("bookdown")',
-        "first in the Console."
-      )
-    )
-  }
-}
-if (!require(sussexthesis)) {
-  if (params$`Install needed packages for {sussexthesis}`) {
-    remotes::install_github("de84sussex/sussexthesis")
-  } else {
-    stop(
-      paste(
-        "You need to run",
-        'remotes::install_github("de84sussex/sussexthesis")',
-        "first in the Console."
-      )
-    )
-  }
-}
-library(sussexthesis)
-library(dplyr)
-library(ggplot2)
-library(knitr)
-flights <- read.csv("data/flights.csv", stringsAsFactors = FALSE)
-```
 
-# Chapter 3: Chapter 3 Title
+# Chapter 3 Title
 
