--- a/inst/rstudio/templates/project/resources/01-chap1.Rmd
+++ b/inst/rstudio/templates/project/resources/01-chap1.Rmd
@@ -1,3 +1,21 @@
 
 # Chapter 1 Title
 
+
+<!-- 
+
+when writing your chapters, be cautious of using the correct heading level:
+
+# is used for the chapter title only
+
+## is used for level 1 headings (e.g., Introduction, Method, Results, Discussion..)
+
+### is used for level 2 headings (e.g., Sample, Materials, Design..)
+
+#### is used for level 3 headings 
+
+##### is used for level 4 headings 
+
+##### is used for level 5 headings 
+
+-->
